crates/adoc-cli/tests/snapshots/why_cli__why_json.snap
---
source: crates/adoc-cli/tests/why_cli.rs
expression: stdout
---
{
  "schema_version": "adoc.retrieval.v1",
  "records": [
    {
      "record_type": "knowledge_object",
      "id": "billing.refunds.issue-credit",
      "kind": "claim",
      "status": "verified",
      "content_hash": "sha256:f8983f5582c342eafe666bd3c2c8e3074c64367181ebf739983a0226eb159cb0",
      "owner": "team-billing",
      "verified_at": "2026-05-06",
      "body": "Refund credits are issued from the ledger after approval.",
      "source": {
        "path": "docs/refunds.adoc",
        "line": 12,
        "column": 3
      },
      "evidence": {
        "human_review": "risk-team",
        "source_code": "ledger-export",
        "test": "cargo test refunds"
      },
      "relations": {
        "depends_on": [
          "billing.credits.ledger-source"
        ],
        "supersedes": [
          "billing.refunds.manual-credit"
        ],
        "related_to": [
          "billing.refunds.audit-required"
        ]
      }
    }
  ],
  "diagnostics": []
}
